--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 env_for_windows
-/db_csv_tipkor
+db_csv_tipkor/*
